--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 # Site settings
-title: "Joon: Roon for Jekyll"
+title: "梓瑶的博客"
 logo: logo.png # image from https://www.flickr.com/photos/lwr/5496279831/in/set-72157594159055823
-email: your-email@domain.com
+email: zhangziyao@yiyun.com
 description: > # this means to ignore newlines until "baseurl:"
-  Roon was an excellent service, with a beautiful understated design. Roon
-  was eventually acquired by Ghost, who awesomely chose to open source the theme.
-  <br/>This is my Jekyll port of the Roon theme
-url: "http://vormwald.github.io" # the base hostname & protocol for your site
-baseurl: "/joon" # the subpath of your site, e.g. /blog/
-twitter_username: jekyllrb
-github_username:  jekyll
+    我是梓瑶，今天我的博客正式开业了@2015_12_12
+url: "http://ziyao.co" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog/
+twitter_username: zhangziyao
+github_username:  zhangziyao
 
 # Build settings
 markdown: kramdown
