--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "梓瑶的博客"
-logo: logo.png # image from https://www.flickr.com/photos/lwr/5496279831/in/set-72157594159055823
+logo: logo.jpg # image from https://www.flickr.com/photos/lwr/5496279831/in/set-72157594159055823
 email: zhangziyao@yiyun.com
 description: > # this means to ignore newlines until "baseurl:"
     我是梓瑶，今天我的博客正式开业了@2015_12_12
